--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
-<div class="col-md-6 col-md-offset-3">
-
-</div>
+<kendo-grid
+          [data]="view | async"
+          [pageSize]="pageSize"
+          [skip]="skip"
+          [pageable]="true"
+        >
+        <kendo-grid-column field="Itemnum" width="100"></kendo-grid-column>
+        <kendo-grid-column field="ItemName" width="200"></kendo-grid-column>
+        <kendo-grid-column field="Price"></kendo-grid-column>
+</kendo-grid>
