--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,9 +6,9 @@
             <input type="text" class="form-control" name="username" [(ngModel)]="logindata.username" #username="ngModel" required />
             
                 
-            <label for="customer">Customer</label>
+           <!-- <label for="customer">Customer</label>
             <input type="text" class="form-control" name="customer" [(ngModel)]="logindata.customer" #password="ngModel" required />
-            
+           --> 
             <label for="password">Password</label>
             <input type="password" class="form-control" name="password" [(ngModel)]="logindata.password" #password="ngModel" required />
             
