Added menu component (panelbar with a lot of todo's)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,21 @@
 <!-- main app container -->
 <div class="jumbotron">
     <div class="container">
-        <nav *ngIf="router.url.substring(0,6) != '/login'">
-            <a (click)="logoutDo()">Logout</a>
-            <a routerLink="/home" routerLinkActive="active">Home</a>
-            <a routerLink="/item" routerLinkActive="active">Items</a>
-        </nav>
-        <div class="col-sm-8 col-sm-offset-2">
+        <div class="content">
             <alert></alert>
             <router-outlet></router-outlet>
         </div>
+        <nav *ngIf="router.url.substring(0,6) != '/login'">
+            <aside class="left-sidebar">
+                <div class="panelbar-wrapper">
+                    <kendo-panelbar (stateChange)="stateChange($event)">
+                        <kendo-panelbar-item [title]="'Home'"></kendo-panelbar-item>
+                        <kendo-panelbar-item [title]="'Items'"></kendo-panelbar-item>
+                        <kendo-panelbar-item [title]="'Logout'" expanded="false"></kendo-panelbar-item>
+                    </kendo-panelbar>
+                </div>
+            </aside>
+        </nav>
     </div>
 </div>
 
